--- a/style.css
+++ b/style.css
@@ -11,20 +11,27 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-color: wheat;
 }
 
-.btn {
+.btn,
+.btn16,
+.btn32,
+.btn64 {
     border: none;
     color: white;
     font-size: 26px;
-    margin-top: -20px;
-    margin-bottom: 40px;
+    margin: -20px 10px 40px 10px;
     background-color: black;
     border-radius: 6px;
     cursor: pointer;
 }
 
-#container {
+.btn {
+    background-color: rgb(202, 0, 0);
+}
+
+.container {
     margin: 20px;
     padding: 5px;
     border: 2px solid black;
@@ -33,22 +40,60 @@ body {
     display: flex;
     flex-wrap: wrap;
     align-self: center;
-    position: relative;
+    background-color: white;
 }
 
 .row {
-    height: 100%;
-    width: 100%;
+    min-height: 0;
+    min-width: 0;
+    box-sizing: border-box;
+    flex: 1;
 }
 
 .cell {
-    width: 1rem;
-    height: 1rem;
-    box-sizing: border-box;
-    border: 1px solid black;
+    border: 1px solid rgba(0, 0, 0, 0.110);
+}
+
+.cell16 {
+    width: 29.2px;
+    height: 29.2px;
+}
+
+.cell32{
+    width: 13.6px;
+    height: 13.6px;
+}
+.cell64{
+    width: 5.8px;
+    height: 5.8px;
 }
 
 .hovered {
     transition: 0.1s;
     background-color: black;
+}
+
+@media only screen and (max-width: 600px) {
+    .container {
+        height: 300px;
+        width: 300px;
+    }
+
+    .cell {
+        border: 0.4px solid rgba(0, 0, 0, 0.110);
+    }
+
+    .cell16 {
+        width: 16.7px;
+        height: 16.7px;
+    }
+    
+    .cell32{
+        width: 7.39px;
+        height: 7.39px;
+    }
+    .cell64{
+        width: 2.7px;
+        height: 2.7px;
+    }
 }
